--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type "text/css" href="styles.css">
+    <link rel="stylesheet" type= "text/css" href="styles.css">
     <title>My Favorite Animal</title>
 </head>
 <body>
@@ -13,6 +13,7 @@
         <li>dogs</li>
         <li>Dolphines</li>
         <li>Lions</li>
+        <li>Horse</li>
     </ul>
     <p>Hello World</p>
 </body>
